# cropsquare

./: .gitignore  AUTHORS  README  RELEASE  configure.ac
doc/: TODO
man/: Makefile.am  man-cropsquare.txt
src/: Makefile.am  main.cpp
